name:                whither-wander
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/markongithub/whither_wander#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable WhitherBART
  hs-source-dirs:      src
  main-is:             WhitherBART.hs
  default-language:    Haskell2010
  build-depends:       aeson, base, binary, bytestring, containers, HTTP, text, time, timezone-olson, timezone-series
