name:                whither-wander
version:             0.1.0.0
-- synopsis:
description:         is this necessary
homepage:            https://github.com/markongithub/whither_wander#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     WhitherPermutations
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson, base, binary, bytestring, containers, HTTP, http-types, text, time, timezone-olson, timezone-series

executable WhateverSBB
  hs-source-dirs:      src
  main-is:             WhateverSBB.hs
  default-language:    Haskell2010
  build-depends:       aeson, base, binary, bytestring, containers, HTTP, http-types, text, time, timezone-olson, timezone-series

executable WhitherBART
  hs-source-dirs:      src
  main-is:             WhitherBART.hs
  default-language:    Haskell2010
  build-depends:       aeson, base, binary, bytestring, containers, HTTP, http-types, text, time, timezone-olson, timezone-series

executable WhitherMuni
  hs-source-dirs:      src
  main-is:             WhitherMuni.hs
  default-language:    Haskell2010
  build-depends:       aeson, base, binary, bytestring, containers, HTTP, http-types, text, time, timezone-olson, timezone-series

test-suite TestWhitherPermutations
  main-is:             TestWhitherPermutations.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       whither-wander, HUnit, test-framework, test-framework-hunit, aeson, base, binary, bytestring, containers, HTTP, text, time, timezone-olson, timezone-series
